<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <RelativeLayout
            android:backgroundTint="@color/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/profile"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileLabel"
                android:layout_marginTop="16dp"
                android:text="@string/firstName"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLabel"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nicknameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="16dp"
                android:text="@string/nickname"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@id/nicknameLabel"
                android:layout_marginTop="8dp"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nickname"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLabel"
                android:layout_marginTop="8dp"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="Edit Profile"
                android:textColor="@color/white"
                app:backgroundTint="@color/button" />



            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/btnEditProfile" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnEditProfile"
                android:layout_centerHorizontal="true"
                android:text="Logout"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.85" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>