<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.maximus.moodtrack.ui.moodlist.MoodListViewModel"/>
        <import type="android.view.View"/>
    </data>

    <ScrollView
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="0dp"
            tools:context=".ui.moodlist.StatisticsFragment">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_logging_consent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/card_mood">

                <LinearLayout
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/Statistic"
                        android:textColor="@color/text"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_mood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_logging_consent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintBottom_toTopOf="@id/card_progress">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        app:iconGravity="end"
                        app:icon="@drawable/ic_expand"
                        app:dayOfTheMonth="@{viewModel.selectedDate}"
                        tools:text="10 May"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Card"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_mood">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/mood_label_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="32dp"
                        android:maxWidth="32dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/smile"
                        app:tint="@color/colorMood1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/very_happy"/>

                    <ImageView
                        android:id="@+id/mood_label_mid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="32dp"
                        android:maxWidth="32dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/smile"
                        app:tint="@color/colorMood3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mood_label_top"
                        app:layout_constraintBottom_toTopOf="@id/mood_label_bottom"
                        android:contentDescription="@string/neutral"/>

                    <ImageView
                        android:id="@+id/mood_label_bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="32dp"
                        android:maxWidth="32dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/smile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/very_sad"
                        app:tint="@color/colorMood5"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/mood_label_top"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_export"
                style="@style/Card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_progress">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:contentDescription="@string/export"
                        android:maxHeight="48dp"
                        android:onClick="@{() -> viewModel.export()}"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/baseline_sim_card_download_24"
                        app:tint="@color/button_color" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>